[package]
name = "canndrews-misc-ext-traits"
version = "0.2.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"

[dependencies]
futures = { version = "0.1", optional = true }
tokio = { version = "0.1", optional = true }
bytes = { version = "0.4.9", optional = true }
rand = { version = "0.5.5" }
unwrap = "1"

